# metadata

./: .gitignore  .readthedocs.yaml  BUILD.bazel  Dockerfile  Makefile  OWNERS  README.md  WORKSPACE  go.mod  go.sum  license.txt  license_info.csv  package-lock.json  prow_config.yaml  roadmap.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
api/: BUILD.bazel  README.md  api.pb.go  api.pb.gw.go  api.proto  api.swagger.json  generate_proto.sh  service.pb.go  service.pb.gw.go  service.proto  service.swagger.json
crd_logger/: main.go
dockerfiles/: Dockerfile-linux-base  Dockerfile-linux-base.aarch64  Dockerfile-linux-base.ppc64le
docs/: conf.py  index.rst  requirements.txt
docs/source/: md.rst
frontend/: Dockerfile  OWNERS  docker_build.js  gen_grpc_web_protos.js  gen_grpc_web_protos.sh  gen_licenses.js  package-lock.json  package.json  start-proxy.js  start-proxy.sh  test.js  tsconfig.json  tslint.json  use_local_frontend_repo.sh
frontend/public/: index.html  manifest.json
frontend/server/: package-lock.json  package.json  server.ts
frontend/src/: App.tsx  Css.tsx  TestUtils.ts  TestUtils.tsx  fonts.scss  index.tsx
frontend/src/__mocks__/: grpc-web.ts  typestyle.ts
frontend/src/atoms/: BusyButton.test.tsx  MD2Tabs.test.tsx  MD2Tabs.tsx
frontend/src/components/: ArtifactInfo.test.tsx  ArtifactInfo.tsx  ArtifactLink.tsx  Banner.tsx  CustomTable.test.tsx  CustomTable.tsx  EdgeCanvas.css  EdgeCanvas.tsx  LineChart.d.ts  LineageActionBar.test.tsx  LineageActionBar.tsx  LineageApi.ts  LineageCard.css  LineageCard.tsx  LineageCardColumn.css  LineageCardColumn.tsx  LineageCardRow.css  LineageCardRow.tsx  LineageCss.ts  LineageTypes.ts  LineageUtils.ts  ModelInfo.test.tsx  ModelInfo.tsx  ResourceInfo.test.tsx  ResourceInfo.tsx  Router.tsx  SideNav.tsx  Toolbar.test.tsx  Toolbar.tsx
frontend/src/lib/: Api.test.ts  Api.ts  Common.ts  Utils.test.ts  Utils.ts  Utils.tsx
frontend/src/pages/: 404.tsx  ArtifactDetails.test.tsx  ArtifactDetails.tsx  ArtifactList.test.tsx  ArtifactList.tsx  ExecutionDetails.tsx  ExecutionList.tsx  LineageView.tsx  ModelDetails.test.tsx  ModelDetails.tsx  Page.tsx  SideNav.test.tsx  SideNav.tsx
ml_metadata/: BUILD.bazel  Dockerfile  README.md  metadata_source.pb.go  metadata_store.pb.go  metadata_store_service.pb.go
ml_metadata/proto/: BUILD.bazel
mocks/: BUILD.bazel  metadata_store_service_client_mock.go
python_client/: OWNERS  README.md  data_set.py  dataset.py  metadata.py  metrics.py  model.py  run.py  workspace.py
python_client/tests/: test.py
resource_logger/: Makefile  logger.go
resource_logger/Dockerfile/: resource_list_testing.json
resource_logger/main/: main.go
schema/: BUILD.bazel  README.md  generate_doc.sh  schema_test.go
schema/alpha/: entity.json  execution.json
schema/alpha/artifacts/: artifact.json  data_set.json  executable.json  metrics.json  model.json
schema/alpha/containers/: workspace.json
schema/alpha/docs/: entity.md  execution.md
schema/alpha/docs/artifacts/: artifact.md  data_set.md  executable.md  metrics.md  model.md
schema/alpha/docs/containers/: workspace.md
schema/examples/alpha/: artifact.json  data_set.json  entity.json  executable.json  execution.json
schemaparser/: BUILD.bazel  register.go  register_test.go  schemajson.go  schemajson_test.go  schemaset.go  schemaset_test.go
schemaparser/testdata/: base.json  ext.json
sdk/: OWNERS
sdk/go/openapi_client/: README.md  api_metadata_service.go  client.go  configuration.go  model_api_create_artifact_response.go  model_api_create_artifact_type_response.go  model_api_create_execution_response.go  model_api_create_execution_type_response.go  model_api_get_artifact_response.go  model_api_get_artifact_type_response.go  model_api_get_execution_response.go  model_api_get_execution_type_response.go  model_api_list_artifact_types_response.go  model_api_list_artifacts_response.go  model_api_list_events_response.go  model_api_list_execution_types_response.go  model_api_list_executions_response.go  model_event_path.go  model_ml_metadata_artifact.go  model_ml_metadata_artifact_struct_type.go  model_ml_metadata_artifact_type.go  model_ml_metadata_dict_artifact_struct_type.go  model_ml_metadata_event.go  model_ml_metadata_event_type.go  model_ml_metadata_execution.go  model_ml_metadata_execution_state.go  model_ml_metadata_execution_type.go  model_ml_metadata_intersection_artifact_struct_type.go  model_ml_metadata_list_artifact_struct_type.go  model_ml_metadata_property_type.go  model_ml_metadata_tuple_artifact_struct_type.go  model_ml_metadata_union_artifact_struct_type.go  model_ml_metadata_value.go  model_path_step.go  response.go
sdk/python/: Makefile  README.md  build.sh  demo.ipynb  demo.nbconvert.ipynb  setup.py
sdk/python/docs/: conf.py
sdk/python/kfmd/: metadata.py
sdk/python/sample/: MLMD-Cases.ipynb  demo.ipynb
sdk/python/tests/: __init__.py  run_tests.sh  test.py  test_metadata.py  test_notebook.py
server/: BUILD.bazel  main.go
service/: BUILD.bazel  metadata_store.go  schema_service.go  schema_service_test.go  service.go  service_test.go
swagger_clients/python/: README.md  setup.py
test/e2e/: Make-Requests.ps1  artifact_model_1.json  create_execution.json  create_executions.json  make_requests.sh  update_execution_type.json  update_model_type.json
test/pipeline-runs/: go-tests-run.yaml
test/scripts/: build-images.sh  create-cluster.sh  run-e2e-tests.sh  setup-services-run-tests.sh  setup-services.sh  tear-down-cluster.sh  unittests.sh
third_party_licenses/: README.md  additional_license_info.csv  dep.txt  license_info.csv  patch_additional_license_info.py  repo.txt
watcher/: Makefile  README.md  cloudbuild.yaml  developer_guide.md  latest_image.yaml  watcher.go
watcher/Dockerfile/: resource_list.json  resource_list_testing.json
watcher/dockerfiles/: Dockerfile  kustomization.yaml  resource_list.json  role.yaml  rolebinding.yaml  watcher.yaml
watcher/examples/: dataset.yaml  simple_job.yaml
watcher/handlers/: metalogger.go
watcher/main/: main.go
(+161 files in other folders)
