load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/kubeflow/metadata
# gazelle:exclude schema
# gazelle:exclude ml_metadata
# gazelle:exclude third_party
# gazelle:resolve go ml_metadata/metadata_store/mlmetadata @google_ml_metadata//ml_metadata/metadata_store:metadata_store_go
# gazelle:resolve go ml_metadata/proto/metadata_store_go_proto @google_ml_metadata//ml_metadata/proto:metadata_store_go_proto
# gazelle:resolve go ml_metadata/proto/metadata_store_service_go_proto @google_ml_metadata//ml_metadata/proto:metadata_store_service_go_proto
gazelle(name = "gazelle")
