load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_path")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

# Tell Gazelle to ignore grpc-gateway generated proto files when generating
# BUILD rules.
# gazelle:exclude api.pb.gw.go

proto_library(
    name = "api_proto",
    srcs = ["api.proto"],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_proto"],
)

go_proto_library(
    name = "api_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "@com_github_grpc_ecosystem_grpc_gateway//protoc-gen-grpc-gateway:go_gen_grpc_gateway",  # keep
    ],
    importpath = "github.com/kubeflow/metadata/api",
    proto = ":api_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

go_library(
    name = "go_default_library",
    embed = [":api_go_proto"],
    importpath = "github.com/kubeflow/metadata/api",
    visibility = ["//visibility:public"],
)

go_path(
    name = "api_generated_go_sources",
    deps = [
        ":api_go_proto",
    ],
)
