load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "metadata_source.pb.go",
        "metadata_store.pb.go",
        "metadata_store_service.pb.go",
    ],
    importpath = "github.com/kubeflow/metadata/ml_metadata",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
