load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["metadata_store_service_client_mock.go"],
    importpath = "github.com/kubeflow/metadata/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_mock//gomock:go_default_library",
        "@google_ml_metadata//ml_metadata/proto:metadata_store_service_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
