load("@io_bazel_rules_go//go:def.bzl", "go_test")

exports_files(glob(["**/*.json"]))

filegroup(
    name = "schemas",
    srcs = glob(["**/*.json"]),
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["schema_test.go"],
    deps = [
        "@com_github_bmatcuk_doublestar//:go_default_library",
        "@com_github_xeipuuv_gojsonschema//:go_default_library",
    ],
)
