load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "schemajson.go",
        "schemaset.go",
    ],
    importpath = "github.com/kubeflow/metadata/schemaparser",
    visibility = ["//visibility:public"],
    deps = ["@com_github_xeipuuv_gojsonschema//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "schemajson_test.go",
        "schemaset_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "@com_github_bmatcuk_doublestar//:go_default_library",
        "@com_github_davecgh_go_spew//spew:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
