load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "github.com/kubeflow/metadata/service",
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["service_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//api:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
